2000-03-06  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/simple.c: Modify the material parameters.
	(simple_init): Set the ambient parameters for lights.

2000-03-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/Makefile.am (EXTRA_DIST): Add options-0.dtd.

	* NEWS: Updated.

	* bin/main.cc (show_about_dialog): Remove _() for version_format.

	* configure.in (ALL_LINGUAS): Changed.

	* bin/main.cc (PROGRAM, COPYRIGHT_YEAR): New macros.
	(class clock_app): Remove members describe and ad.  Add new
	members main_window and show_about_dialog.
	(handle_about_ok_clicked): New function.
	(show_about_dialog): New function.
	(describe): Removed.
	(handle_about_command): New function.
	(create_window): Create window only if not created yet.
	(clock_app): Initialize main_window.
	(edit_options): Cast data to clock_app*.
	(show_about_dialog): Show the dialog at the end.
	(create_window): Add box1 to the main window first.
	(show_about_dialog): Add cleanup for exceptions.

	* lib/glclock.cc (update): Rotate only if there is a context.

1999-12-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/main.cc (class clock_app): Moved out of unnamed namespace.
	(class clock_app): Add static variables for options.
	(namespace): Remove options variable moved to class clock_app.
	(parse_options): Change options handling.
	(create_window, clock_app): Use new variables for options.
	(namespace): Moved just before main.

	* NEWS: Modified.

	* bin/profile.cc (save): Set DTD.

	* bin/Makefile.am (pkgdata_DATA): Add options-0.dtd.
	(INCLUDES): Define OPTIONS_DTD.

	* bin/options-0.dtd: New file.

1999-11-18  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

1999-11-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* NEWS: Modified.

	* doc/rglclock.xml: Modified.

	* README: Modified.

	* NEWS: Modified.

	* configure.in (ALL_LINGUAS): Substitute ja.eucjp with ja.eucJP.

1999-11-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
