@@ -1,3 +1,7 @@
+2000-03-06  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* POTFILES.in: Remove lib/about.cc.
+
 2000-03-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* ja_JP.eucJP.po: Renamed from ja.eucJP.po.
